# store-api

./: .env  .gitignore  Cargo.toml  README.md  deploy.sh  test.sh  todo
excel_templates/: 2023.12.05越东出货单.xlsx  embryo_template.xlsx  items_template.xlsx  产品列表_202309211335.xls  产品列表_202309211335.xltx  客户_202309211336.xls  客户_202309211336.xltx  耳钉.xlsx  销售单_202309211339.xltx  韩国客人.xlsx
migrations/: 20230809053050_db.down.sql  20230809053050_db.up.sql
src/: config.rs  constants.rs  error.rs  main.rs
src/common/: datetime.rs  db.rs  hashmap.rs  items.rs  list.rs  log.rs  mod.rs  string.rs
src/config/: database.rs  parameter.rs
src/dto/: dto_account.rs  dto_cates.rs  dto_customer.rs  dto_embryo.rs  dto_excel.rs  dto_items.rs  dto_orders.rs  dto_settings.rs  mod.rs
src/excel/: mod.rs  parse_embryo.rs  parse_import_orders.rs  parse_items.rs  parse_legacy_orders.rs  parse_orders.rs  test_order_excel.py
src/handler/: mod.rs  routes_account.rs  routes_cates.rs  routes_customer.rs  routes_embryo.rs  routes_excel.rs  routes_items.rs  routes_login.rs  routes_material.rs  routes_orders.rs  routes_settings.rs  routes_static.rs  routes_upload.rs
src/middleware/: auth.rs  jwt_auth.rs  mod.rs
src/model/: account.rs  cates.rs  customer.rs  embryo.rs  excel.rs  items.rs  mod.rs  order.rs  settings.rs
src/repository/: account_repository.rs  embryo_repository.rs  mod.rs  order_repository.rs
src/response/: api_response.rs
src/service/: account_service.rs  cates_service.rs  customer_service.rs  embryo_service.rs  item_service.rs  mod.rs  (+2 more)
tests/: quick_dev.rs
(+9 files in other folders)
